--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header {
   left: 0;
   width: 100%;
   height: 7rem;
-  z-index: 9999;
+  z-index: 99;
   transition: 1s;
 }
 
@@ -41,7 +41,7 @@ header {
   left: 0;
   width: 100%;
   height: 7rem;
-  z-index: 9999;
+  z-index: 99;
   transition: 1s;
 }
 .noise {
@@ -80,6 +80,14 @@ header {
   text-decoration: none;
   font-size: 1.4rem;
   color: var(--second-bg-color);
+}
+
+.menu-toggle {
+  display: none;
+}
+
+.close-menu {
+  display: none;
 }
 
 nav {
@@ -129,6 +137,8 @@ nav ul li {
   transition: width 0.3s;
 }
 
+/* Home */
+
 .container {
   position: absolute;
   left: 0;
@@ -137,12 +147,15 @@ nav ul li {
   width: 100%;
   background: var(--main-bg-color);
   opacity: 0.9;
+  z-index: 1;
 }
 
 .welcome {
   position: absolute;
   left: 10%;
   top: 10em;
+  height: 20%;
+  width: 80%;
 }
 
 .welcome h1 {
@@ -150,18 +163,10 @@ nav ul li {
   color: var(--second-bg-color);
 }
 
-.highlight {
-  background: var(--second-bg-color);
-  color: var(--main-bg-color);
-  line-height: 10px;
-  padding: 0;
-  color: rgb(250, 215, 192);
-}
-
 .certificates {
   position: absolute;
   display: flex;
-  top: 60%;
+  top: 55%;
   left: 10%;
   width: 60%;
 }
@@ -170,7 +175,7 @@ nav ul li {
 .data-nd {
   margin-right: 1em;
   border: 1px solid black;
-  width: 30%;
+  width: 40%;
   border-radius: 10px;
   text-align: center;
   font-size: 0.8rem;
@@ -183,7 +188,7 @@ nav ul li {
 .data-nd:hover {
   margin-right: 1em;
   border: 1px solid black;
-  width: 30%;
+  width: 40%;
   border-radius: 10px;
   text-align: center;
   font-size: 0.8rem;
@@ -196,9 +201,8 @@ nav ul li {
 
 .proj-blog {
   position: absolute;
-  left: 70%;
-  transform: translate(-50%);
-  top: 60%;
+  top: 70%;
+  left: 10%;
   width: 160px;
   height: 6rem;
   padding: 1.2rem;
@@ -236,11 +240,22 @@ nav ul li {
   width: 100%;
   transition: width 0.3s;
 }
+*/
 
-/* second section */
-.separator {
+/* Blog section */
+#separator {
   position: absolute;
-  top: 0;
+  top: 90%;
+  left: 10%;
+  width: 10px;
+  height: 10px;
+  z-index: 999;
+  background: var(--second-bg-color);
+}
+
+.line {
+  position: absolute;
+  top: 100%;
   left: 10%;
   height: 1px;
   width: 80%;
@@ -262,22 +277,70 @@ nav ul li {
   left: 10%;
   top: 10%;
   width: 80%;
-  height: 80%;
+  height: 70%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 5px;
+  gap: 3em;
 }
 
 .post {
   position: relative;
   text-align: left;
-  display: subgrid;
-  padding: 1em;
+  border-bottom: 1px solid var(--second-bg-color);
+  border-right: 1px solid var(--second-bg-color);
+  overflow: hidden;
+  padding-right: 1em;
+  height: 100%;
+}
+
+.flash {
+  animation: flash 1s;
+}
+
+@keyframes flash {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.post h1 {
+  font-size: 1rem;
+}
+
+.post h4 {
+  font-size: 0.8rem;
+}
+
+.post-button {
+  position: absolute;
+  bottom: 2em;
+  width: 40%;
+  height: 2em;
+  border: 1px solid var(--second-bg-color);
+  border-radius: 10px;
+  font-size: 0.8rem;
+  text-align: center;
+  padding: 0.2em;
+  transition: 0.5s;
+}
+
+.post-button:hover {
+  position: absolute;
+  bottom: 2em;
+  width: 40%;
+  height: 2em;
   background-color: var(--second-bg-color);
   color: var(--main-bg-color);
-  border: 1px solid black;
+  border: 1px solid var(--second-bg-color);
+  border-radius: 10px;
+  font-size: 0.8rem;
+  text-align: center;
+  padding: 0.2em;
   cursor: pointer;
-  overflow: hidden;
+  transition: 0.5s;
 }
 
 #post-0 {
@@ -287,27 +350,38 @@ nav ul li {
 .post-image {
   position: absolute;
   right: 0;
-  bottom: 0;
-  width: 40%;
-  border: 1px solid black;
-  margin: 1em;
+  bottom: 0.5em;
+  width: 20%;
+  height: 20%;
+  margin: 0.5em;
+  text-align: right;
+  font-size: 3.5rem;
+  color: #303030;
+}
+
+.pagination {
+  position: absolute;
+  top: 85%;
+  left: 10%;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.9rem;
+}
+.pagination div:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 /* About */
 .about-me {
   position: absolute;
-  /* background-color: var(--second-bg-color); */
-  /* color: var(--main-bg-color); */
   top: 30%;
   left: 10%;
   width: 80%;
   height: 50%;
   border-top: 1px solid #303030;
   padding-top: 1em;
-
-  /* border: 1px solid black; */
-  /* z-index: 999; */
-  /* box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); */
 }
 
 .bio {
@@ -446,10 +520,7 @@ nav ul li {
 /* Contact */
 .contact {
   position: absolute;
-  /* background-color: var(--second-bg-color); */
-  /* color: var(--main-bg-color); */
   border-top: 1px solid #303030;
-  /* margin-top: 1em; */
   top: 30%;
   left: 10%;
   width: 80%;
@@ -560,7 +631,7 @@ footer {
 
 h1 {
   margin-bottom: 1em;
-  color: rgb(250, 215, 192);
+  color: #303030;
 }
 
 h2 {
@@ -599,4 +670,468 @@ h2 {
   height: 100%;
   background-color: var(--main-bg-color);
   opacity: 0.5;
+}
+
+@media screen and (max-width: 992px) {
+  /* //Nav */
+  .menu-toggle {
+    display: block;
+    position: absolute;
+    right: 10%;
+    bottom: 1em;
+    z-index: 2;
+    color: var(--second-bg-color);
+  }
+  .menu-toggle:hover {
+    cursor: pointer;
+    opacity: 0.7;
+  }
+
+  .main-nav {
+    display: none;
+  }
+
+  .mobile-nav {
+    opacity: 0;
+    position: fixed;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--second-bg-color);
+    transition: 0.7s;
+    z-index: -10;
+  }
+
+  .mobile-nav.active {
+    position: fixed;
+    opacity: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--second-bg-color);
+    z-index: 9999;
+    transition: 0.5s;
+  }
+
+  .mobile-nav.active ul {
+    position: absolute;
+    left: 0%;
+    top: 20%;
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .mobile-nav.active ul li {
+    text-align: center;
+    list-style: none;
+  }
+
+  .mobile-nav.active ul li a {
+    color: var(--main-bg-color);
+  }
+
+  .close-menu.active {
+    display: block;
+    color: var(--main-bg-color);
+    position: absolute;
+    right: 10%;
+    top: 4.5em;
+    z-index: 3;
+    cursor: pointer;
+  }
+
+  /* Home */
+  .welcome h1 {
+    font-size: 2rem;
+  }
+
+  .certificates {
+    position: absolute;
+    display: flex;
+    top: 50%;
+    left: 10%;
+    width: 80%;
+  }
+
+  .fswd-nd,
+  .data-nd {
+    margin-right: 1em;
+    border: 1px solid var(--second-bg-color);
+    width: 40%;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 0.7rem;
+    text-transform: uppercase;
+    padding: 0.5em;
+    transition: 0.5s;
+  }
+
+  .fswd-nd:hover,
+  .data-nd:hover {
+    margin-right: 1em;
+    border: 1px solid var(--second-bg-color);
+    width: 40%;
+    font-size: 0.7rem;
+    border-radius: 10px;
+    color: var(--main-bg-color);
+    cursor: pointer;
+    background-color: var(--second-bg-color);
+    transition: 0.5s;
+  }
+
+  .blog-posts {
+    position: absolute;
+    left: 10%;
+    top: 0%;
+    width: 80%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    /* grid-template-columns: 1fr; */
+    gap: 3em;
+  }
+
+  .post {
+    position: relative;
+    text-align: left;
+    border-bottom: 1px solid var(--second-bg-color);
+    border-right: none;
+    margin-bottom: 1em;
+    overflow: hidden;
+    padding-right: 1em;
+    height: 100%;
+  }
+
+  .post:nth-child(1) {
+    margin-top: 1em;
+  }
+
+  .post h1 {
+    font-size: 0.8rem;
+  }
+
+  .post h4 {
+    font-size: 0.6rem;
+  }
+
+  .post-button {
+    position: absolute;
+    bottom: 1em;
+    width: 30%;
+    height: 2em;
+    border: 1px solid var(--second-bg-color);
+    border-radius: 10px;
+    font-size: 0.5rem;
+    text-align: center;
+    padding: 0.2em;
+    transition: 0.5s;
+  }
+
+  .post-button:hover {
+    position: absolute;
+    bottom: 1em;
+    width: 30%;
+    height: 2em;
+    background-color: var(--second-bg-color);
+    color: var(--main-bg-color);
+    border: 1px solid var(--second-bg-color);
+    border-radius: 10px;
+    font-size: 0.5rem;
+    text-align: center;
+    padding: 0.2em;
+    cursor: pointer;
+    transition: 0.5s;
+  }
+
+  .post-image {
+    position: absolute;
+    right: 0;
+    bottom: 0.5em;
+    width: 20%;
+    height: 20%;
+    margin: 0.5em;
+    text-align: right;
+    font-size: 2rem;
+    color: #303030;
+  }
+
+  .pagination {
+    position: absolute;
+    top: 90%;
+    left: 10%;
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.7rem;
+  }
+  .pagination div:hover {
+    cursor: pointer;
+    opacity: 0.7;
+  }
+
+  /* About */
+
+  .projects-title {
+    font-size: 1.3rem;
+  }
+  .about-me {
+    position: absolute;
+    top: 25%;
+    left: 10%;
+    width: 80%;
+    height: 50%;
+    border-top: 1px solid #303030;
+    padding-top: 1em;
+  }
+
+  .bio {
+    width: 55%;
+    height: 100%;
+    line-height: 2.2em;
+    font-size: 0.5rem;
+    margin-top: 1em;
+    /* padding: 3%; */
+  }
+
+  .photo {
+    position: absolute;
+    width: 30%;
+    left: 65%;
+    top: 10%;
+    border-radius: 10%;
+    border: 1px solid black;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
+  .skills {
+    position: absolute;
+    top: 100vh;
+    left: 10%;
+    top: 70%;
+    text-align: center;
+    width: 80%;
+    /* background: var(--main-bg-color); */
+    /* opacity: 0.9; */
+  }
+
+  .skill-header {
+    margin: 1.2em 0 0.5em 0;
+    text-align: left;
+    font-size: 1.3rem;
+    background: transparent;
+  }
+
+  .skills-list {
+    position: absolute;
+    top: 9em;
+    width: 100%;
+    left: 0%;
+    display: grid;
+    font-size: 0.6rem;
+    grid-template-columns: repeat(7, 1fr);
+    text-align: center;
+  }
+
+  .skills-list i {
+    font-size: 1.3rem;
+  }
+
+  .skills-list p {
+    font-size: 0.5rem;
+  }
+
+  /* Projects */
+
+  h2 {
+    font-size: 1rem;
+  }
+  h5 {
+    font-size: 0.8rem;
+  }
+
+  .proj-two {
+    position: absolute;
+    left: 0;
+    top: 100vh;
+    height: 100vh;
+    width: 100%;
+    background: var(--main-bg-color);
+    opacity: 0.9;
+    z-index: -1;
+  }
+
+  .project-one {
+    position: absolute;
+    top: 30%;
+    left: 10%;
+    width: 80%;
+    height: 50vh;
+    border-top: 1px solid #303030;
+    /* background-color: red; */
+    padding-top: 1em;
+  }
+
+  .p-desc {
+    margin-top: 1em;
+    width: 100%;
+    font-size: 0.5rem;
+  }
+
+  .p-links-one,
+  .p-links-two,
+  .p-links-three {
+    position: absolute;
+    /* padding-bottom: 2em; */
+    left: 0;
+    bottom: 0%;
+    width: 100%;
+    height: 15%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+    align-items: center;
+  }
+  .p-links-one i,
+  .p-links-two i,
+  .p-links-three i {
+    font-size: 1.5rem;
+  }
+
+  .project-two {
+    position: absolute;
+    top: 80%;
+    left: 10%;
+    width: 80%;
+    height: 50vh;
+    border-top: 1px solid #303030;
+    padding-top: 1em;
+  }
+
+  .project-three {
+    position: absolute;
+    top: 130%;
+    left: 10%;
+    width: 80%;
+    height: 50vh;
+    border-top: 1px solid #303030;
+    padding-top: 1em;
+  }
+
+  /* Contact */
+
+  .contact {
+    font-size: 0.8rem;
+  }
+  .resume {
+    border: 1px solid var(--second-bg-color);
+    width: 45%;
+    text-align: center;
+    position: absolute;
+    top: 55%;
+    letter-spacing: 0.3rem;
+    transition: 0.5s;
+    border-radius: 10px;
+  }
+
+  .resume:hover {
+    border: 1px solid var(--main-bg-color);
+    background-color: var(--second-bg-color);
+    color: var(--main-bg-color);
+    width: 45%;
+    text-align: center;
+    position: absolute;
+    top: 55%;
+    letter-spacing: 0.3rem;
+    cursor: pointer;
+    transition: 0.5s;
+  }
+
+  .contact-socials {
+    position: absolute;
+    top: 20%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    font-size: 2rem;
+    text-align: center;
+    padding: 1em;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .about-me {
+    position: absolute;
+    top: 25%;
+    left: 10%;
+    width: 80%;
+    height: 50%;
+    border-top: 1px solid #303030;
+    padding-top: 1em;
+  }
+
+  .bio {
+    position: absolute;
+    top: 40%;
+    width: 100%;
+    height: 100%;
+    line-height: 2.2em;
+    font-size: 0.4rem;
+    margin-top: 1em;
+    /* padding: 3%; */
+  }
+
+  .photo {
+    position: absolute;
+    width: 30%;
+    left: 50%;
+    transform: translate(-50%);
+    top: 10%;
+    border-radius: 10%;
+    border: 1px solid black;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
+  .skills {
+    position: absolute;
+    top: 100vh;
+    left: 10%;
+    top: 70%;
+    text-align: center;
+    width: 80%;
+    /* background: var(--main-bg-color); */
+    /* opacity: 0.9; */
+  }
+
+  .skill-header {
+    margin: 1.2em 0 0.5em 0;
+    text-align: left;
+    font-size: 1.3rem;
+    background: transparent;
+  }
+
+  .skills-list {
+    position: absolute;
+    top: 9em;
+    width: 100%;
+    left: 0%;
+    display: grid;
+    font-size: 0.6rem;
+    grid-template-columns: repeat(7, 1fr);
+    text-align: center;
+  }
+
+  .skills-list i {
+    font-size: 1.3rem;
+  }
+
+  .skills-list p {
+    font-size: 0.5rem;
+  }
 }
